app/assets/stylesheets/application.css
/* ... */
.box_submitter {
	border: 1px solid #cacaca;
	border-top: 0px;
	background-color: #eaeaea;
	padding: 1em;
}
.box_submitter input {
	width: 10em;
}

.box .legend {
	background-color: white;
	margin-bottom: 1em;
	padding: 0;
	font-weight: bold;
	font-size: 11pt;
}
.box .sublegend {
	font-size: 9.5pt;
	font-weight: normal;
	font-style: italic;
	color: gray;
}
.box .legend.right {
	float: right;
}

.box .boxtitle {
	background-color: #f0f0f0;
	border-bottom: 1px solid #cacaca;
	display: block;
	font-weight: bold;
	margin: -3px -7px 4px -7px;
	padding: 3px 5px 3px 5px;
}

.box label,
.box .label_holder {
	display: block;
	float: left;
	margin-bottom: 4px;
}

.box label.required {
	font-weight: bold;
}
.box img {
	vertical-align: middle;
}
.box label,
.box span,
.box select,
.box br,
.box div.d {
	line-height: 2em;
}
.box br {
	clear: left;
}
.box .boxline {
	clear: both;
	margin-bottom: 0.5em;
}
.box p {
	margin-top: 1em;
}

.box textarea {
	margin-bottom: 4px;
	width: 75%;
}

.box input.normal,
.box label.normal {
	display: inline;
	float: none;
	vertical-align: middle;
}

.box label,
.box .label_holder {
	width: 7em;
	line-height: 2em;
	vertical-align: middle;
}

.box .label_holder label,
.box .label_holder input {
	line-height: 2.5em;
	vertical-align: middle;
}

.hint {
	color: gray;
	font-style: italic;
	margin-left: 1em;
}

.hintblock {
	color: gray;
	font-style: italic;
	margin-left: 7em;
}

.box.wide label,
.box.wide .label_holder {
	width: 12em;
}
.box.wide .hintblock {
	margin-left: 12em;
}



/* for flash_notices() and flash_errors() */

div.flash-error,
div.flash-notice,
div.flash-success,
div.errorExplanation {
	position: relative;
	padding: 7px 15px;
	margin-bottom: 18px;
	color: white;
	background-color: #eedc94;
	background-repeat: repeat-x;
	background-image: -khtml-gradient(linear, left top, left bottom, from(#fceec1), to(#eedc94));
	background-image: -moz-linear-gradient(top, #fceec1, #eedc94);
	background-image: -ms-linear-gradient(top, #fceec1, #eedc94);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fceec1), color-stop(100%, #eedc94));
	background-image: -webkit-linear-gradient(top, #fceec1, #eedc94);
	background-image: -o-linear-gradient(top, #fceec1, #eedc94);
	background-image: linear-gradient(top, #fceec1, #eedc94);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fceec1', endColorstr='#eedc94', GradientType=0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	border-color: #eedc94 #eedc94 #e4c652;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
	border-width: 1px;
	border-style: solid;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
}
div.flash-error a,
div.flash-notice a,
div.flash-success a,
div.errorExplanation a {
	font-weight: bold;
	color: #404040;
}
div.flash-error p a,
div.flash-notice p a,
div.flash-success p a,
div.errorExplanation a {
	color: #ffffff;
}
div.flash-error p,
div.flash-notice p,
div.flash-success p,
div.errorExplanation p {
	margin-bottom: 0;
}
div.flash-error div,
div.flash-notice div,
div.flash-success div,
div.errorExplanation div {
	margin-top: 5px;
	margin-bottom: 2px;
	line-height: 28px;
}
div.flash-error,
div.errorExplanation {
	background-color: #c43c35;
	background-repeat: repeat-x;
	background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
	background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
	background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
	background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
	background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
	background-image: linear-gradient(top, #ee5f5b, #c43c35);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	border-color: #c43c35 #c43c35 #882a25;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}
div.flash-success {
	background-color: #57a957;
	background-repeat: repeat-x;
	background-image: -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
	background-image: -moz-linear-gradient(top, #62c462, #57a957);
	background-image: -ms-linear-gradient(top, #62c462, #57a957);
	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62c462), color-stop(100%, #57a957));
	background-image: -webkit-linear-gradient(top, #62c462, #57a957);
	background-image: -o-linear-gradient(top, #62c462, #57a957);
	background-image: linear-gradient(top, #62c462, #57a957);
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	border-color: #57a957 #57a957 #3d773d;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
}
/* ... */

